Update Firecracker VM configuration and add test VM creation scripts
- Updated `config.json` to use absolute paths for kernel and root filesystem images.
- Added `create_test_vm.go` script for creating a test VM using the Firecracker SDK, including customizable parameters and error handling.
- Introduced `create_test_vm_README.md` to document the usage, requirements, and troubleshooting for the test VM creation process.

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,19 +1,18 @@
 {
     "boot-source": {
-      "kernel_image_path": "hello-vmlinux.bin",
+      "kernel_image_path": "/home/bluequbit/Dev/faas/assets/hello-vmlinux.bin",
       "boot_args": "$KERNEL_BOOT_ARGS"
     },
     "drives": [
       {
         "drive_id": "rootfs",
-        "path_on_host": "hello-rootfs.ext4",
+        "path_on_host": "/home/bluequbit/Dev/faas/assets/ubuntu-22.04.ext4",
         "is_root_device": true,
         "is_read_only": false
       }
     ],
     "machine-config": {
       "vcpu_count": 2,
-      "mem_size_mib": 1024,
-      "ht_enabled": false
+      "mem_size_mib": 1024
     }
   }
