Update README and .gitignore for Skyscale
- Revised README to enhance clarity and structure, including an overview, current features, architecture, and usage instructions.
- Added sections for function development and configuration management.
- Updated .gitignore to include additional paths and file types relevant to the project.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ assets
 firecrackerlab
 control-plane/skyscale.db
 scripts/firecrackerlab
+control-plane/function-storage/
+*.ext4
+*.db
+control-plane/skyscale.db
