Add Skyscale configuration and simplify test commands
- Introduced a new Skyscale configuration file (`skyscale.yaml`) for Python runtime.
- Updated the Makefile to simplify test commands by removing the `test-no-redis` target and clarifying the `test` target description.
- Added pprof import to `api.go` for performance profiling.

--- a/control-plane/Makefile
+++ b/control-plane/Makefile
@@ -32,13 +32,10 @@ clean: redis-stop
 	go clean
 	rm -f $(BINARY_NAME)
 
-# Run tests with Redis
+# Run tests
 test: redis-start
 	go test ./...
 
-# Run tests without Redis
-test-no-redis:
-	go test ./...
 
 # Build for production
 prod:
